# megaminx-world-model-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.codex/skills/: brainstorm  browse-environments  create-environments  evaluate-environments  optimize-with-environments  review-environments  train-with-environments
.github/workflows/: ci.yml
configs/: endpoints.toml
configs/eval/: megaminx-depth1-v027-strict.toml  megaminx-depth1-v028-strict.toml  megaminx-depth1.toml  megaminx-scaling.toml  megaminx-v028-step20-token-heldout.toml
configs/rl/: megaminx-depth1-qwen-08b-solve-flow-binary-v022.toml  megaminx-depth1-qwen-35b-a3b-candidate-strips.toml  megaminx-depth1-qwen-35b-a3b-face-hint-direction.toml  megaminx-depth1-qwen-35b-a3b-flow-binary-v021.toml  megaminx-depth1-qwen-35b-a3b-indexed-direction.toml  megaminx-qwen-4b.toml  (+35 more)
environments/: AGENTS.md
environments/megaminx_solver/: README.md  pyproject.toml
environments/megaminx_solver/.prime/: .env-metadata.json
environments/megaminx_solver/megaminx_solver/: __init__.py  megaminx_solver.py  simulator.py
reports/: megaminx-next-run-runbook.md  megaminx-rl-report.md
scripts/: check_next_run_readiness.py  convert_oracle_to_sft_jsonl.py  eval_sft_lora_offline.py  export_oracle_trajectories.py  project_sft_to_openai_tools.py  summarize_oracle_trajectories.py  train_sft_lora.py  validate_sft_jsonl.py
tests/: test_megaminx_solver.py  test_next_run_readiness.py  test_oracle_export.py  test_rl_configs.py  test_sft_offline_eval.py  test_sft_training.py
tmp_subagent_notes/: rl_missing_tests.md
(+9 files in other folders)
