[project]
name = "megaminx-solver"
description = "Trainable multi-turn Megaminx spatial reasoning environment for Prime Intellect Verifiers."
tags = ["multi-turn", "tool-env", "spatial-reasoning", "megaminx", "rl", "train", "eval"]
version = "0.2.5"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "datasets>=4.6.1",
    "verifiers>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["megaminx_solver"]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 3
max_tokens = 1024
